deals/colusa.css
.hero-header {
	font-family: "Raleway", sans-serif;
	font-optical-sizing: auto;
	font-weight: 700;
	font-style: normal;
	font-size: 2rem;
}
body, html, .multi-select-label {
	height: 100%;
	margin: 0;
	padding: 0;

	font-family: "Raleway", sans-serif;
	font-weight: 400;
	font-style: normal;
	
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: #f9f9f4;
}
.multi-select-label {
	justify-content: left;
	align-items: left;
}
h1 {
	font-family: 'Raleway', sans-serif;
	font-weight: 600;
	text-align: center;
	margin-bottom: 15px;
}
h2 {
	font-family: 'Raleway', sans-serif;
	font-weight: 300;
	text-align: center;
	margin-bottom: 15px;
}

